Tue Dec  1 18:35:23 CET 2020 <Daniel.Diaz@univ-paris1.fr>

	* port to arm/Linux (32 bits=armv7 and 64 bits=aarch64) - many thanks to
	  Jasper Taylor <jasper@simulistics.com>
	* fix problem with gcc 10 which needs explicitly -fcommon

Mon Nov 30 18:14:35 CET 2020 <Daniel.Diaz@univ-paris1.fr>

	* fix bugs when Prolog integers are internally converted to C int (on 64 bits machine)

Tue Oct 23 17:34:21 CEST 2018 <Daniel.Diaz@univ-paris1.fr>

	* fix problem with old gcc (gcc < 6 does not produce PIE code by default)

Thu Feb 1 15:40:29 2018 CET 2018 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in soft-cut (when a cut appears in the if-part)

Mon Jan 22 14:58:59 CET 2018 <Daniel.Diaz@univ-paris1.fr>

	* fix bug when consulting multifile predicates with alternatives
	* add ?- ISO prefix operator

Fri Jan 12 17:01:53 CET 2018 <Daniel.Diaz@univ-paris1.fr>

	* add gplc option --new-top-level (add top-level command-line option handling)

Sun Jun  4 20:38:58 CEST 2017 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug on linux witg gcc 6.3.0 (or binutils): needs PIC code

Fri Apr  3 10:01:02 CEST 2015 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in findall/4

Tue Feb 17 11:39:11 CET 2015 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in select/5 under Windows

Fri Jan 16 19:25:51 CET 2015 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the compiler

Thu Dec 18 08:59:45 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in read/1
	* fix large address awarenes under cygwin32 (configure.in)

Thu Dec 11 17:18:09 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* improve memory limitation of acyclic_term/1

Tue Dec  9 10:40:18 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* improve term output (write/1 and friends)

Fri Dec  5 02:55:30 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* improve error handling for options (e.g. in write_term/3)

Thu Dec  4 15:47:06 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix bug with cut in the if-part of if-then(-else)
	* fix port to x86_64/OpenBSD